--- a/notebooks/tshirt_avatar.ipynb
+++ b/notebooks/tshirt_avatar.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyvista as pv\n",
     "import numpy as np\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import pygmsh\n",
+    "import meshio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,8 @@
     "right_sleeve_points = [[0.35, 1.20, 0.25], [0.35, 1.39,0.25] ]\n",
     "center_points = [[0.15, 1.55,0.25], [-0.15, 1.55,0.25],]\n",
     "left_sleeve_points = [[-0.35, 1.39,0.25], [-0.35, 1.20, 0.25]]\n",
-    "lower_left_points = [[-0.25, 1.25, 0.25], [-0.25, 0.95, 0.25], [0., 0.95, 0.25]]\n",
+    "# lower_left_points = [[-0.25, 1.25, 0.25], [-0.25, 0.95, 0.25], [0., 0.95, 0.25]]\n",
+    "lower_left_points = [[-0.25, 1.25, 0.25], [-0.25, 0.95, 0.25]]\n",
     "\n",
     "tshirt_points = lower_right_points + right_sleeve_points + center_points + left_sleeve_points + lower_left_points\n",
     "tshirt_lines = pv.lines_from_points(tshirt_points)"
@@ -50,28 +53,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pygmsh' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 24\u001b[0m\n\u001b[1;32m     20\u001b[0m     mesh_pv \u001b[38;5;241m=\u001b[39m pv\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/tmp/out.vtk\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m mesh_pv\n\u001b[0;32m---> 24\u001b[0m triangle_mesh \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_mesh\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtshirt_lines\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [9], line 2\u001b[0m, in \u001b[0;36mcreate_mesh\u001b[0;34m(closed_lines)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_mesh\u001b[39m(closed_lines: pv\u001b[38;5;241m.\u001b[39mPolyData) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m pv\u001b[38;5;241m.\u001b[39mPolyData:\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mpygmsh\u001b[49m\u001b[38;5;241m.\u001b[39mgeo\u001b[38;5;241m.\u001b[39mGeometry() \u001b[38;5;28;01mas\u001b[39;00m geom:\n\u001b[1;32m      3\u001b[0m         geom\u001b[38;5;241m.\u001b[39madd_polygon(\n\u001b[1;32m      4\u001b[0m             closed_lines,\n\u001b[1;32m      5\u001b[0m             mesh_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m,\n\u001b[1;32m      6\u001b[0m         )\n\u001b[1;32m      8\u001b[0m         mesh: meshio\u001b[38;5;241m.\u001b[39mMesh \u001b[38;5;241m=\u001b[39m geom\u001b[38;5;241m.\u001b[39mgenerate_mesh(\n\u001b[1;32m      9\u001b[0m             dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, algorithm\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     10\u001b[0m         )  \u001b[38;5;66;03m# 5: Delaunay\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pygmsh' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Meshing 1D...\n",
+      "Info    : [  0%] Meshing curve 1 (Line)\n",
+      "Info    : [ 10%] Meshing curve 2 (Line)\n",
+      "Info    : [ 20%] Meshing curve 3 (Line)\n",
+      "Info    : [ 30%] Meshing curve 4 (Line)\n",
+      "Info    : [ 40%] Meshing curve 5 (Line)\n",
+      "Info    : [ 50%] Meshing curve 6 (Line)\n",
+      "Info    : [ 60%] Meshing curve 7 (Line)\n",
+      "Info    : [ 70%] Meshing curve 8 (Line)\n",
+      "Info    : [ 80%] Meshing curve 9 (Line)\n",
+      "Info    : [ 90%] Meshing curve 10 (Line)\n",
+      "Info    : [100%] Meshing curve 11 (Line)\n",
+      "Info    : Done meshing 1D (Wall 0.000660862s, CPU 0.001051s)\n",
+      "Info    : Meshing 2D...\n",
+      "Info    : Meshing surface 1 (Plane, Delaunay)\n",
+      "Info    : Done meshing 2D (Wall 0.00258022s, CPU 0.002561s)\n",
+      "Info    : 99 nodes 207 elements\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<table>\n",
+       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
+       "<tr><td>N Cells</td><td>167</td></tr>\n",
+       "<tr><td>N Points</td><td>99</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-3.500e-01, 3.500e-01</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>9.500e-01, 1.550e+00</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-2.500e-01, -2.500e-01</td></tr>\n",
+       "<tr><td>N Arrays</td><td>0</td></tr>\n",
+       "</table>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "UnstructuredGrid (0x1417806a0)\n",
+       "  N Cells:\t167\n",
+       "  N Points:\t99\n",
+       "  X Bounds:\t-3.500e-01, 3.500e-01\n",
+       "  Y Bounds:\t9.500e-01, 1.550e+00\n",
+       "  Z Bounds:\t-2.500e-01, -2.500e-01\n",
+       "  N Arrays:\t0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def create_mesh(closed_lines: pv.PolyData) -> pv.PolyData:\n",
+    "def create_mesh(closed_lines: np.ndarray) -> pv.PolyData:\n",
     "    with pygmsh.geo.Geometry() as geom:\n",
     "        geom.add_polygon(\n",
     "            closed_lines,\n",
-    "            mesh_size=1.0,\n",
+    "            mesh_size=0.1,\n",
     "        )\n",
     "\n",
     "        mesh: meshio.Mesh = geom.generate_mesh(\n",
@@ -90,18 +133,20 @@
     "\n",
     "    return mesh_pv\n",
     "\n",
-    "triangle_mesh = create_mesh(tshirt_lines)"
+    "triangle_mesh_front = create_mesh(tshirt_lines.points)\n",
+    "triangle_mesh_back = triangle_mesh_front.copy(deep=True)\n",
+    "triangle_mesh_back.translate((0, 0, -0.5), inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e12d2316dda47d197ff30535a05d76f",
+       "model_id": "0b15e5525a444d73aa73608cd7da3dc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,12 +166,44 @@
     "plotter = pv.Plotter()\n",
     "plotter.add_mesh(avatar_mesh, color=\"yellow\")\n",
     "# plotter.add_mesh(plane, color=\"blue\")\n",
-    "plotter.add_mesh(tshirt_triangles, color = \"blue\", show_edges=True)\n",
+    "plotter.add_mesh(triangle_mesh_back, color = \"blue\", show_edges=True)\n",
+    "plotter.add_mesh(triangle_mesh_front, color = \"blue\", show_edges=True)\n",
     "\n",
-    "# plotter.add_point_labels(plane.points[100], labels = [f\"{str(plane.points[100])}\"])\n",
+    "edge_points = triangle_mesh_front.extract_feature_edges(boundary_edges=True, \n",
+    "                                      non_manifold_edges=False, \n",
+    "                                      manifold_edges=False)\n",
+    "\n",
+    "plotter.add_point_labels(edge_points.points, labels = [str(point) for point in edge_points.points])\n",
     "\n",
     "plotter.add_axes()\n",
     "plotter.show(cpos = 'xy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  0,  1,  2,  2,  3,  2,  4,  5,  2,  6,  7,  2,  8,  9,  2,  9,\n",
+       "       10,  2, 11, 12,  2, 13, 14,  2, 15, 16,  2,  7, 17,  2, 18,  8,  2,\n",
+       "        5, 19,  2, 20, 21,  2, 22, 23,  2, 17,  4,  2, 12, 15,  2, 19, 13,\n",
+       "        2, 24, 18,  2, 23,  0,  2,  3, 20,  2, 16,  6,  2, 10, 22,  2, 21,\n",
+       "       24,  2, 25,  2,  2,  1, 26,  2, 26, 27,  2, 27, 11,  2, 28, 25,  2,\n",
+       "       14, 28])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edge_points.points\n",
+    "\n",
+    "edge_point_indexes = [triangle_mesh_front.find_closest_point(point) for point in edge_points.points] "
    ]
   },
   {
