--- a/notebooks/tshirt_avatar.ipynb
+++ b/notebooks/tshirt_avatar.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "avatar_path = Path(\"../\").resolve() / \"data\" / \"spread_arms.obj\"\n",
+    "avatar_path = Path(\"../\").resolve() / \"data\" / \"avatar\" / \"spread_arms.obj\"\n",
     "avatar_mesh = pv.read(avatar_path)\n",
     "\n",
     "avatar_mesh = avatar_mesh.scale([0.01, 0.01, 0.01])"
@@ -181,29 +181,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 2,  0,  1,  2,  2,  3,  2,  4,  5,  2,  6,  7,  2,  8,  9,  2,  9,\n",
-       "       10,  2, 11, 12,  2, 13, 14,  2, 15, 16,  2,  7, 17,  2, 18,  8,  2,\n",
-       "        5, 19,  2, 20, 21,  2, 22, 23,  2, 17,  4,  2, 12, 15,  2, 19, 13,\n",
-       "        2, 24, 18,  2, 23,  0,  2,  3, 20,  2, 16,  6,  2, 10, 22,  2, 21,\n",
-       "       24,  2, 25,  2,  2,  1, 26,  2, 26, 27,  2, 27, 11,  2, 28, 25,  2,\n",
-       "       14, 28])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 2, 9, 25, 6, 21, 5, 19, 0, 11, 12, 16, 4, 7, 23, 17, 18, 20, 28, 22, 26, 10, 1, 13, 27, 24, 15, 3, 8]\n",
+      "21 [-0.21666667  1.49666667  0.25      ]\n",
+      "5 [0.15 1.55 0.25]\n",
+      "19 [0.05 1.55 0.25]\n",
+      "0 [0.   0.95 0.25]\n",
+      "11 [0.08333333 0.95       0.25      ]\n",
+      "12 [0.16666667 0.95       0.25      ]\n",
+      "16 [0.35  1.295 0.25 ]\n",
+      "4 [0.35 1.39 0.25]\n",
+      "7 [-0.35  1.39  0.25]\n",
+      "23 [-0.35   1.295  0.25 ]\n",
+      "17 [0.28333333 1.44333333 0.25      ]\n",
+      "18 [0.21666667 1.49666667 0.25      ]\n",
+      "20 [-0.05  1.55  0.25]\n",
+      "28 [-0.08333333  0.95        0.25      ]\n",
+      "22 [-0.28333333  1.44333333  0.25      ]\n",
+      "26 [-0.25  1.05  0.25]\n",
+      "10 [-0.25  0.95  0.25]\n",
+      "1 [0.25 0.95 0.25]\n",
+      "13 [0.25 1.05 0.25]\n",
+      "27 [-0.16666667  0.95        0.25      ]\n",
+      "24 [-0.3    1.225  0.25 ]\n",
+      "15 [0.3   1.225 0.25 ]\n",
+      "3 [0.35 1.2  0.25]\n",
+      "8 [-0.35  1.2   0.25]\n"
+     ]
     }
    ],
    "source": [
-    "edge_points.points\n",
+    "edge_point_indexes = [triangle_mesh_front.find_closest_point(point) for point in edge_points.points] \n",
     "\n",
-    "edge_point_indexes = [triangle_mesh_front.find_closest_point(point) for point in edge_points.points] "
+    "print(edge_point_indexes)\n",
+    "for index in edge_point_indexes[5:]:\n",
+    "    print(index, triangle_mesh_front.points[index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangle_mesh_front_file = Path(\"../\").resolve() / \"data\" / \"avatar\" / \"tshirt_front.obj\"\n",
+    "triangle_mesh_back_file = Path(\"../\").resolve() / \"data\" / \"avatar\" / \"tshirt_back.obj\"\n",
+    "pv.save_meshio(filename=triangle_mesh_front_file, mesh=triangle_mesh_front)\n",
+    "pv.save_meshio(filename=triangle_mesh_back_file, mesh=triangle_mesh_back)"
    ]
   },
   {
