Testing bigger mesh

--- a/notebooks/tshirt_avatar.ipynb
+++ b/notebooks/tshirt_avatar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vikramsingh/Library/Caches/pypoetry/virtualenvs/pbd-GYzgUBp8-py3.8/lib/python3.8/site-packages/pyvista/core/pointset.py:262: PyVistaDeprecationWarning: You did not specify a value for `inplace` and the default value will be changing to `False` in future versions for point-based meshes (e.g., `PolyData`). Please make sure you are not assuming this to be an inplace operation.\n",
-      "  warnings.warn(DEFAULT_INPLACE_WARNING, PyVistaDeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "avatar_path = Path(\"../\").resolve() / \"data\" / \"avatar\" / \"spread_arms.obj\"\n",
     "avatar_mesh = pv.read(avatar_path)\n",
@@ -36,16 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower_right_points = [[0, 0.95, 0.25], [0.25, 0.95, 0.25], [0.25, 1.25, 0.25]]\n",
-    "right_sleeve_points = [[0.35, 1.20, 0.25], [0.35, 1.39,0.25] ]\n",
-    "center_points = [[0.15, 1.55,0.25], [-0.15, 1.55,0.25],]\n",
-    "left_sleeve_points = [[-0.35, 1.39,0.25], [-0.35, 1.20, 0.25]]\n",
-    "# lower_left_points = [[-0.25, 1.25, 0.25], [-0.25, 0.95, 0.25], [0., 0.95, 0.25]]\n",
-    "lower_left_points = [[-0.25, 1.25, 0.25], [-0.25, 0.95, 0.25]]\n",
+    "z_offset = 0.15\n",
+    "\n",
+    "lower_right_points = [[0, 0.95, z_offset], [0.25, 0.95, z_offset], [0.25, 1.25, z_offset]]\n",
+    "right_sleeve_points = [[0.35, 1.20, z_offset], [0.35, 1.45,z_offset] ]\n",
+    "center_points = [[0.15, 1.61,z_offset], [-0.15, 1.61,z_offset],]\n",
+    "left_sleeve_points = [[-0.35, 1.45,z_offset], [-0.35, 1.20, z_offset]]\n",
+    "lower_left_points = [[-0.25, 1.25, z_offset], [-0.25, 0.95, z_offset]]\n",
     "\n",
     "tshirt_points = lower_right_points + right_sleeve_points + center_points + left_sleeve_points + lower_left_points\n",
     "tshirt_lines = pv.lines_from_points(tshirt_points)"
@@ -53,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -72,11 +64,11 @@
       "Info    : [ 80%] Meshing curve 9 (Line)\n",
       "Info    : [ 90%] Meshing curve 10 (Line)\n",
       "Info    : [100%] Meshing curve 11 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.000660862s, CPU 0.001051s)\n",
+      "Info    : Done meshing 1D (Wall 0.000650391s, CPU 0.000845s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 1 (Plane, Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.00258022s, CPU 0.002561s)\n",
-      "Info    : 99 nodes 207 elements\n"
+      "Info    : Done meshing 2D (Wall 0.00244748s, CPU 0.002439s)\n",
+      "Info    : 101 nodes 211 elements\n"
      ]
     },
     {
@@ -85,26 +77,26 @@
        "\n",
        "<table>\n",
        "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>167</td></tr>\n",
-       "<tr><td>N Points</td><td>99</td></tr>\n",
+       "<tr><td>N Cells</td><td>169</td></tr>\n",
+       "<tr><td>N Points</td><td>101</td></tr>\n",
        "<tr><td>X Bounds</td><td>-3.500e-01, 3.500e-01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>9.500e-01, 1.550e+00</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-2.500e-01, -2.500e-01</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>9.500e-01, 1.610e+00</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-2.000e-01, -2.000e-01</td></tr>\n",
        "<tr><td>N Arrays</td><td>0</td></tr>\n",
        "</table>\n",
        "\n"
       ],
       "text/plain": [
-       "UnstructuredGrid (0x1417806a0)\n",
-       "  N Cells:\t167\n",
-       "  N Points:\t99\n",
+       "UnstructuredGrid (0x150121dc0)\n",
+       "  N Cells:\t169\n",
+       "  N Points:\t101\n",
        "  X Bounds:\t-3.500e-01, 3.500e-01\n",
-       "  Y Bounds:\t9.500e-01, 1.550e+00\n",
-       "  Z Bounds:\t-2.500e-01, -2.500e-01\n",
+       "  Y Bounds:\t9.500e-01, 1.610e+00\n",
+       "  Z Bounds:\t-2.000e-01, -2.000e-01\n",
        "  N Arrays:\t0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,19 +126,20 @@
     "    return mesh_pv\n",
     "\n",
     "triangle_mesh_front = create_mesh(tshirt_lines.points)\n",
+    "# Create back mesh by copying and translating\n",
     "triangle_mesh_back = triangle_mesh_front.copy(deep=True)\n",
-    "triangle_mesh_back.translate((0, 0, -0.5), inplace=True)"
+    "triangle_mesh_back.translate((0, 0, -0.35), inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b15e5525a444d73aa73608cd7da3dc9",
+       "model_id": "e9756c3124da402c8d4b34567384337b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,11 +154,8 @@
    "source": [
     "center = (0, 1.1, 0.25)\n",
     "\n",
-    "plane = pv.Plane(center=center, direction=(0, 0, 1), i_size=0.5, j_size=0.3)\n",
-    "\n",
     "plotter = pv.Plotter()\n",
     "plotter.add_mesh(avatar_mesh, color=\"yellow\")\n",
-    "# plotter.add_mesh(plane, color=\"blue\")\n",
     "plotter.add_mesh(triangle_mesh_back, color = \"blue\", show_edges=True)\n",
     "plotter.add_mesh(triangle_mesh_front, color = \"blue\", show_edges=True)\n",
     "\n",
@@ -173,7 +163,7 @@
     "                                      non_manifold_edges=False, \n",
     "                                      manifold_edges=False)\n",
     "\n",
-    "plotter.add_point_labels(edge_points.points, labels = [str(point) for point in edge_points.points])\n",
+    "# plotter.add_point_labels(edge_points.points, labels = [str(point) for point in edge_points.points])\n",
     "\n",
     "plotter.add_axes()\n",
     "plotter.show(cpos = 'xy')"
@@ -181,38 +171,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14, 2, 9, 25, 6, 21, 5, 19, 0, 11, 12, 16, 4, 7, 23, 17, 18, 20, 28, 22, 26, 10, 1, 13, 27, 24, 15, 3, 8]\n",
-      "21 [-0.21666667  1.49666667  0.25      ]\n",
-      "5 [0.15 1.55 0.25]\n",
-      "19 [0.05 1.55 0.25]\n",
-      "0 [0.   0.95 0.25]\n",
-      "11 [0.08333333 0.95       0.25      ]\n",
-      "12 [0.16666667 0.95       0.25      ]\n",
-      "16 [0.35  1.295 0.25 ]\n",
-      "4 [0.35 1.39 0.25]\n",
-      "7 [-0.35  1.39  0.25]\n",
-      "23 [-0.35   1.295  0.25 ]\n",
-      "17 [0.28333333 1.44333333 0.25      ]\n",
-      "18 [0.21666667 1.49666667 0.25      ]\n",
-      "20 [-0.05  1.55  0.25]\n",
-      "28 [-0.08333333  0.95        0.25      ]\n",
-      "22 [-0.28333333  1.44333333  0.25      ]\n",
-      "26 [-0.25  1.05  0.25]\n",
-      "10 [-0.25  0.95  0.25]\n",
-      "1 [0.25 0.95 0.25]\n",
-      "13 [0.25 1.05 0.25]\n",
-      "27 [-0.16666667  0.95        0.25      ]\n",
-      "24 [-0.3    1.225  0.25 ]\n",
-      "15 [0.3   1.225 0.25 ]\n",
-      "3 [0.35 1.2  0.25]\n",
-      "8 [-0.35  1.2   0.25]\n"
+      "[25, 8, 26, 15, 3, 16, 22, 23, 5, 20, 0, 11, 18, 19, 17, 4, 7, 24, 21, 30, 12, 28, 10, 1, 13, 6, 14, 27, 9, 2, 29]\n",
+      "16 [0.35       1.28333333 0.15      ]\n",
+      "22 [-0.21666667  1.55666667  0.15      ]\n",
+      "23 [-0.28333333  1.50333333  0.15      ]\n",
+      "5 [0.15 1.61 0.15]\n",
+      "20 [0.05 1.61 0.15]\n",
+      "0 [0.   0.95 0.15]\n",
+      "11 [0.08333333 0.95       0.15      ]\n",
+      "18 [0.28333333 1.50333333 0.15      ]\n",
+      "19 [0.21666667 1.55666667 0.15      ]\n",
+      "17 [0.35       1.36666667 0.15      ]\n",
+      "4 [0.35 1.45 0.15]\n",
+      "7 [-0.35  1.45  0.15]\n",
+      "24 [-0.35        1.36666667  0.15      ]\n",
+      "21 [-0.05  1.61  0.15]\n",
+      "30 [-0.08333333  0.95        0.15      ]\n",
+      "12 [0.16666667 0.95       0.15      ]\n",
+      "28 [-0.25  1.05  0.15]\n",
+      "10 [-0.25  0.95  0.15]\n",
+      "1 [0.25 0.95 0.15]\n",
+      "13 [0.25 1.05 0.15]\n",
+      "6 [-0.15  1.61  0.15]\n",
+      "14 [0.25 1.15 0.15]\n",
+      "27 [-0.25  1.15  0.15]\n",
+      "9 [-0.25  1.25  0.15]\n",
+      "2 [0.25 1.25 0.15]\n",
+      "29 [-0.16666667  0.95        0.15      ]\n"
      ]
     }
    ],
@@ -226,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +226,41 @@
     "triangle_mesh_back_file = Path(\"../\").resolve() / \"data\" / \"avatar\" / \"tshirt_back.obj\"\n",
     "pv.save_meshio(filename=triangle_mesh_front_file, mesh=triangle_mesh_front)\n",
     "pv.save_meshio(filename=triangle_mesh_back_file, mesh=triangle_mesh_back)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-200.83954945, -202.52254756,    1.71185032],\n",
+       "       [-179.22400319, -202.52254756,    2.58141812],\n",
+       "       [-153.32116671, -202.52254756,    3.97105604],\n",
+       "       [-139.0765832 , -202.52254756,    4.89045953],\n",
+       "       [-119.88944092, -202.52254756,    6.26969162]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define a simple Gaussian surface\n",
+    "n = 20\n",
+    "x = np.linspace(-200, 200, num=n) + np.random.uniform(-5, 5, size=n)\n",
+    "y = np.linspace(-200, 200, num=n) + np.random.uniform(-5, 5, size=n)\n",
+    "xx, yy = np.meshgrid(x, y)\n",
+    "A, b = 100, 100\n",
+    "zz = A * np.exp(-0.5 * ((xx / b) ** 2.0 + (yy / b) ** 2.0))\n",
+    "\n",
+    "# Get the points as a 2D NumPy array (N by 3)\n",
+    "points = np.c_[xx.reshape(-1), yy.reshape(-1), zz.reshape(-1)]\n",
+    "points[0:5, :]"
    ]
   },
   {
